--- a/style.css
+++ b/style.css
@@ -118,11 +118,16 @@ section, footer {
   }
 
   .flex-nav ul {
-    display: none;
+    visibility: 0;
+    transition: transform 0.3s ease-out;
+    height: auto;
+    transform-origin: top;
+    transform: scaleY(0);
   }
 
   .flex-nav ul.open {
-    display: flex;
+    visibility: 1;
+    transform: scaleY(1);
   }
 
   .top {
